--- a/app_Piadas/Scenes/Details/View/DetailsViewController.xib
+++ b/app_Piadas/Scenes/Details/View/DetailsViewController.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailsViewController" customModule="app_Piadas" customModuleProvider="target">
             <connections>
                 <outlet property="TextoPiadaLabel" destination="gdp-Cc-i76" id="Zdr-8B-Kzy"/>
+                <outlet property="gifImage" destination="foS-Md-dRl" id="rFv-dX-ULG"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,24 +21,34 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gdp-Cc-i76">
-                    <rect key="frame" x="24" y="305" width="366" height="136"/>
+                    <rect key="frame" x="24" y="380" width="366" height="136"/>
                     <string key="text">Laboris nisi est eu excepteur labore pariatur sint. Id anim sunt enim nulla est ex Lorem nulla cillum pariatur et ex ipsum sunt commodo eu aute cillum cillum aute.</string>
                     <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="21"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="270" translatesAutoresizingMaskIntoConstraints="NO" id="Hh6-jA-pGL">
-                    <rect key="frame" x="24" y="44" width="366" height="40"/>
+                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hh6-jA-pGL" userLabel="Botões de navegação">
+                    <rect key="frame" x="24" y="94" width="366" height="40"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eQD-LK-2rD">
-                            <rect key="frame" x="0.0" y="0.0" width="48" height="40"/>
+                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="Eb6-30-T1D"/>
+                            </constraints>
                             <state key="normal" title="Voltar" image="back"/>
                             <connections>
                                 <action selector="navigationButton:" destination="-1" eventType="touchUpInside" id="Dnn-0U-fGL"/>
                             </connections>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WIA-k9-36j">
+                            <rect key="frame" x="40" y="0.0" width="286" height="40"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        </view>
                         <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbu-oh-yrl">
-                            <rect key="frame" x="318" y="0.0" width="48" height="40"/>
+                            <rect key="frame" x="326" y="0.0" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="fgq-nQ-I4y"/>
+                            </constraints>
                             <state key="normal" title="Fechar" image="close"/>
                             <connections>
                                 <action selector="navigationButton:" destination="-1" eventType="touchUpInside" id="Rlc-DW-DWf"/>
@@ -48,16 +59,25 @@
                         <constraint firstAttribute="height" constant="40" id="hgv-RP-8Jy"/>
                     </constraints>
                 </stackView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="download 1" translatesAutoresizingMaskIntoConstraints="NO" id="foS-Md-dRl">
+                    <rect key="frame" x="182" y="708" width="50" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="DMO-Ng-5Mg"/>
+                        <constraint firstAttribute="width" constant="50" id="Fkh-T5-fB1"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="gdp-Cc-i76" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="1Cu-eL-1Vc"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="foS-Md-dRl" secondAttribute="bottom" constant="104" id="3kb-So-Gfm"/>
+                <constraint firstItem="foS-Md-dRl" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7AT-zD-XB3"/>
                 <constraint firstItem="gdp-Cc-i76" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="24" id="JTT-dy-p8n"/>
-                <constraint firstItem="gdp-Cc-i76" firstAttribute="top" secondItem="Hh6-jA-pGL" secondAttribute="bottom" constant="221" id="S4B-Pe-ld6"/>
-                <constraint firstItem="Hh6-jA-pGL" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Vcf-eE-piO"/>
+                <constraint firstItem="Hh6-jA-pGL" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="50" id="Vcf-eE-piO"/>
+                <constraint firstItem="gdp-Cc-i76" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="eJb-yc-UgK"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Hh6-jA-pGL" secondAttribute="trailing" constant="24" id="mdE-2j-MTu"/>
                 <constraint firstItem="Hh6-jA-pGL" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="24" id="oMD-DW-lC8"/>
-                <constraint firstItem="gdp-Cc-i76" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="uZi-xI-yUw"/>
                 <constraint firstItem="gdp-Cc-i76" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" constant="-24" id="xd9-re-3Rr"/>
             </constraints>
             <point key="canvasLocation" x="-120.28985507246378" y="92.410714285714278"/>
@@ -66,6 +86,7 @@
     <resources>
         <image name="back" width="512" height="512"/>
         <image name="close" width="512" height="512"/>
+        <image name="download 1" width="170.66667175292969" height="170.66667175292969"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
